<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/total_view"
        android:textColor="?android:textColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.imc.IMCActivity">

        <TextView
            android:id="@+id/first_text"
            android:textColor="?android:textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/principal_text"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/system_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/central_image"
                android:layout_width="205dp"
                android:layout_height="178dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <Switch
                android:id="@+id/system_switch"
                android:layout_width="186dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activate_english"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="?android:textColorPrimary"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/height_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textColor="?android:textColorPrimary"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:helperText="@string/obligatorio"
                app:startIconCheckable="false">


                <EditText
                    android:id="@+id/editText_height"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="Enter height"
                    android:drawableStart="?android:attr/actionModeFindDrawable"
                    android:ems="10"
                    android:hint="@string/hint"
                    android:inputType="numberDecimal"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="25dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/height_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:text="@string/text_height"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:helperText="@string/obligatorio">


                <EditText
                    android:id="@+id/editText_weight"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:drawableStart="?android:attr/actionModeFindDrawable"
                    android:ems="10"
                    android:hint="@string/hint"
                    android:inputType="numberDecimal"
                    android:textSize="25dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/weight_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0"
                android:text="@string/text_weight"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="24dp" />

        </LinearLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:text="@string/calculate"
            android:textAlignment="center"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/comparition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="22dp"
            android:textColor="?android:textColorPrimary"/>


    </LinearLayout>

</ScrollView>